--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
 <body>
 
   <!-- Your code here -->
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"/>
+  <img
+    src="https://www.flickr.com/photos/mathiasbarbagallo/7703017470/"
+    alt="Moving attraction"
+    />
+  <img 
+    src="https://www.flickr.com/photos/ric_capucho/26991682092/"
+    alt="Snowy landscape that includes trees"
+    title="Prework exercise!"
+    />
 
 </body>
 </html>
